--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.21.13",
     "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^4.16.2",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -36,7 +37,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.1",
+    "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
